# quick-snap

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.prod.yml  manage.py  pyproject.toml  skills-lock.json
.github/workflows/: deploy.yml
deploy/: Caddyfile  deploy.sh  entrypoint.sh  nginx-quicksnap.conf  quicksnap.service
quicksnap/: settings.py  urls.py  wsgi.py
snap/: admin.py  apps.py  context_processors.py  emails.py  i18n.py  models.py  tests.py  urls.py  views.py
snap/migrations/: 0001_initial.py
snap/templates/snap/: base.html  camera.html  done.html  events.html  join.html  landing.html  site_base.html
